--- a/index.html
+++ b/index.html
@@ -4,30 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="flex-intro.css">
-    <title>Flex Intro</title>
+    <link rel="stylesheet" href="practice.css">
+    <title>Flex Practice</title>
 </head>
 <body>
-    <h1>Flex</h1>
+    <h1>Flex Practice</h1>
 
-
-    <ul class="nav">
-        <li>Home</li>
-        <li>About</li>
-        <li>People</li>
-        <li>Contact</li>
-        <li>Courses</li>
-    </ul>
-
-    <div class="container">
-        <header>Header</header>
-        <aside class="left">Left</aside>
-        <main class="main">Main</main>
-        <aside class="right">Rigth</aside>
-        <footer>Footer</footer>
-    </div>
-
-
+    <header>
+        <section class="img">
+          <img src="./img/img-search.png" alt="" />
+        </section>
+        <section class="text">
+          <h2>Which Tech Career Is Right For You?</h2>
+          <p>
+            You are probably wondering about being ready for a new career and its
+            role, according to your needs and skills. You are seeking a career,
+            especially in tech career opportunities. You want a job that pays
+            well, provides autonomy, and challenges you to advance. But which one?
+          </p>
+          <button>Learn More</button>
+        </section>
+      </header>
 
 </body>
 </html>
